--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,12 +1,10 @@
-name: Build Java Project
+name: Java CI with Gradle
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build:
@@ -19,8 +17,8 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
-        java-version: '21' # Use Java version 21
-        distribution: 'adopt' # Specify AdoptOpenJDK distribution
+        java-version: '21'
+        distribution: 'adopt' 
 
     - name: Build with Gradle
-      run: gradlew.bat build
+      run: .\gradlew.bat build
