--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,4 +21,4 @@ jobs:
         distribution: 'adopt' 
 
     - name: Build with Gradle
-      run: .gradlew.bat build
+      run: .\gradlew.bat build
