--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,10 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '21'
-        distribution: 'adopt' 
+        distribution: 'adopt'
+        
+    - name: Initialize Gradle Build
+      run: ./gradlew init  # Use 'gradlew.bat init' for Windows
 
     - name: Build with Gradle
       run: .\gradlew.bat build
